# more_math

./: .gitignore  FUNCTION_CONSISTENCY_REPORT.md  README.md  __init__.py  debug_5d.py  pyproject.toml  pytest.ini  repro_grammar.py  requirements.txt  test_bitwise_fix.py  test_bitwise_shifts.py  test_log.txt  test_log_vars.txt  test_procedural.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml  test.yml
more_math/: AudioMathNode.py  AudioToSpectrogramNode.py  BatchLoraHooksNode.py  BatchLoraNode.py  ClipMathNode.py  ColorMathNode.py  ConditioningMathNode.py  FloatMathNode.py  GuiderMathNode.py  ImageMathNode.py  LatentMathNode.py  MaskMathNode.py  MathNodeBase.py  ModelMathNode.py  NoiseMathNode.py  ParseTree.py  SamplerMathNode.py  ScriptTextWindow.py  SelectiveGuiderMathNode.py  SigmasMathNode.py  SpectrogramToAudioNode.py  Stack.py  StackUnBatcher.py  StringMathNode.py  VaeMathNode.py  VideoMathNode.py  helper_functions.py  minimal_test.py  modelLikeCommon.py  nodes.py  noise_utils.py  test_bitwise_shifts.py
more_math/Parser/: FloatEvalVisitor.py  Func.py  MathExpr.g4  MathExpr.interp  MathExpr.tokens  MathExprBaseListener.java  MathExprBaseVisitor.java  MathExprLexer.interp  MathExprLexer.java  MathExprLexer.py  compile.bat  (+15 more)
tests/: __init__.py  conftest.py  reproduce_conv_issues.py  reproduce_indexing.py  reproduce_size_error.py  test_assignment.py  test_bitwise_comprehensive.py  test_bitwise_fix.py  test_bitwise_fp16.py  test_broadcasting.py  test_conditioning_mismatch.py  test_convolution.py  test_deprecated_nodes.py  test_error_messages.py  test_grammar_coverage.py  test_guider_math.py  test_large_quantile.py  test_model_math.py  test_more_math.py  test_multi_node_mismatch.py  test_new_functions.py  test_permute_fix.py  test_quantile_ops.py  test_shorthands.py  test_signal_stack.py  test_stats.py  test_ternary.py  test_unified_math.py
web/: ScriptTextInput.vue  autocomplete.js  inbuilt_symbols.js  script_text_input.V1.js  script_text_input.V2.js.m  script_text_input.js  script_text_input.js.AI
workflow/: stack_guider.json
(+54 files in other folders)
