[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "more_math"
version = "0.0.2"
tooltip = "Adds math nodes for numbers and types which do not need it."
authors = [
  {name = "Daniel Martinek", email = "danda.martinek@gmail.com"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
classifiers = []
description = "Adds math nodes for FLOAT, CONDITIONING, LATENT, IMAGE, NOISE and AUDIO.

Allows usage of math expressions with variety of functions and variables, not limited to inputs. List of those is on github of this extension."
dependencies = [

]



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/mcDandy/more_math/issues"
homepage = "https://github.com/mcDandy/more_math"
Repository = "https://github.com/mcDandy/more_math.git"


[tool.comfy]
PublisherId = "mkdaniel"
DisplayName = "More Math"
Icon = ""


[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
